ENH: add plotting code for comparing genome as ref to localised ref

--- a/manuscript_scripts/manuscript_figs_tables.ipynb
+++ b/manuscript_scripts/manuscript_figs_tables.ipynb
@@ -570,6 +570,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Comparing with analyses that use reference starting bases chosen at random from the genome\n",
+    "\n",
+    "The `genome_as_ref` directory contains scripts for producing a single concatenated genome. This sequence is then used to produce counts tables for exons data for comparison with the standard analyses that use a local \"matched\" reference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote ../../figures/genome_as_ref_comparison.pdf\u001b[0m\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cd genome_as_ref;./genome_ref_plot.py genome_as_ref.cfg ../../figures/genome_as_ref_comparison.pdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Tables"
    ]
   },
@@ -1118,7 +1146,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
+  },
+  "latex_envs": {
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 0
   }
  },
  "nbformat": 4,
