ENH: manuscript fig/table collation
[NEW] added new exclude patters to hgignore
[NEW] added compound_figures/fig1.tex and compound_figures/fig2.tex,
    which make the corresponding figures in the manuscript. These
    are invoked by the manuscript_figs_tables.ipynb notebook and
    then copied into place.

--- a/manuscript_scripts/manuscript_figs_tables.ipynb
+++ b/manuscript_scripts/manuscript_figs_tables.ipynb
@@ -1,10 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Collating all tables and figures for Zhu et al"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "## Utility functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -16,7 +33,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "code_folding": [
+     0
+    ],
+    "collapsed": false,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -90,7 +111,8 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -181,7 +203,9 @@
    },
    "outputs": [],
    "source": [
-    "!mkdir -p ../figures"
+    "!mkdir -p ../figures\n",
+    "!mkdir -p ../supplementary_figures\n",
+    "!mkdir -p ../compound_figures"
    ]
   },
   {
@@ -195,9 +219,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.json       2.pdf        4.json       MI.pdf       summary.txt\r\n",
-      "1.pdf        3.json       4.pdf        analysis.log\r\n",
-      "2.json       3.pdf        MI.log       summary.pdf\r\n"
+      "1.json            2.pdf.orig        4.pdf             analysis.log.orig\r\n",
+      "1.json.orig       3.json            4.pdf.orig        summary.pdf\r\n",
+      "1.pdf             3.json.orig       MI.log            summary.pdf.orig\r\n",
+      "1.pdf.orig        3.pdf             MI.log.orig       summary.txt\r\n",
+      "2.json            3.pdf.orig        MI.pdf            summary.txt.orig\r\n",
+      "2.json.orig       4.json            MI.pdf.orig\r\n",
+      "2.pdf             4.json.orig       analysis.log\r\n"
      ]
     }
    ],
@@ -211,7 +239,7 @@
    "source": [
     "### C->T figure\n",
     "\n",
-    "Copy the 1,2,3,4 plots and the summary and place them into ../figures/"
+    "Copy the 1,2,3 plots and the summary and place them into `../compound_figures/`. They will be combined into a single multi-panel plot separately."
    ]
   },
   {
@@ -234,9 +262,12 @@
    "outputs": [],
    "source": [
     "for fn in fns:\n",
+    "    if fn.endswith(\"4.pdf\"):\n",
+    "        continue\n",
+    "    \n",
     "    bn = os.path.basename(fn)\n",
     "    bn = \"A_intergenic_freq_All-chrom_A-GC_All-CtoT_%s\" % bn\n",
-    "    ofn = os.path.join(\"../figures/\", bn)\n",
+    "    ofn = os.path.join(\"../compound_figures/\", bn)\n",
     "    shutil.copy(fn, ofn)"
    ]
   },
@@ -244,7 +275,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A->G figure"
+    "### A->G figure\n",
+    "\n",
+    "Copy the 1,2,3 plots and the summary and place them into `../compound_figures/`. They will be combined into a single multi-panel plot separately."
    ]
   },
   {
@@ -257,10 +290,33 @@
    "source": [
     "fns = !ls ../results/ensembl_snps_79/A/intergenic/directions/AtoG/*.pdf\n",
     "for fn in fns:\n",
+    "    if fn.endswith(\"4.pdf\"):\n",
+    "        continue\n",
     "    bn = os.path.basename(fn)\n",
     "    bn = \"A_intergenic_freq_All-chrom_A-GC_All-AtoG_%s\" % bn\n",
-    "    ofn = os.path.join(\"../figures/\", bn)\n",
+    "    ofn = os.path.join(\"../compound_figures/\", bn)\n",
     "    shutil.copy(fn, ofn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Make compound figures and copy into place"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!cd ../compound_figures/; pdflatex fig1.tex > /dev/null 2>&1; pdflatex fig2.tex > /dev/null 2>&1\n",
+    "!find ../compound_figures/ -name \"*.log\" -delete\n",
+    "!find ../compound_figures/ -name \"*.aux\" -delete\n",
+    "!mv ../compound_figures/*.pdf ../figures/."
    ]
   },
   {
@@ -332,7 +388,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Tables"
    ]
@@ -341,7 +399,8 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -350,7 +409,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Make C->T table"
    ]
@@ -359,7 +420,8 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -381,7 +443,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Intergenic autosomal mutation summary table"
    ]
@@ -390,7 +454,8 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -411,7 +476,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Make A->G table"
    ]
@@ -420,7 +487,8 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -442,7 +510,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Melanoma mutation summary"
    ]
@@ -451,7 +521,8 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -471,7 +542,8 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -510,16 +582,20 @@
    "source": [
     "fns = !ls ../results/ensembl_snps_79/A/exon/directions/CtoT/*.pdf\n",
     "for fn in fns:\n",
+    "    if fn.endswith(\"4.pdf\"):\n",
+    "        continue\n",
     "    bn = os.path.basename(fn)\n",
     "    bn = \"A_exon_freq_All-chrom_A-GC_All-CtoT_%s\" % bn\n",
-    "    ofn = os.path.join(\"../figures/\", bn)\n",
+    "    ofn = os.path.join(\"../supplementary_figures\", bn)\n",
     "    shutil.copy(fn, ofn)\n",
     "\n",
     "fns = !ls ../results/ensembl_snps_79/A/exon/directions/AtoG/*.pdf\n",
     "for fn in fns:\n",
+    "    if fn.endswith(\"4.pdf\"):\n",
+    "        continue\n",
     "    bn = os.path.basename(fn)\n",
     "    bn = \"A_exon_freq_All-chrom_A-GC_All-AtoG_%s\" % bn\n",
-    "    ofn = os.path.join(\"../figures/\", bn)\n",
+    "    ofn = os.path.join(\"../supplementary_figures\", bn)\n",
     "    shutil.copy(fn, ofn)"
    ]
   },
@@ -539,7 +615,7 @@
    "outputs": [],
    "source": [
     "fn = \"../results/ensembl_snps_79/A/intergenic/directions/nbr_grid.pdf\"\n",
-    "ofn = os.path.join(\"../figures/\", \"A_intergenic_nbr_grid.pdf\")\n",
+    "ofn = os.path.join(\"../supplementary_figures\", \"A_intergenic_nbr_grid.pdf\")\n",
     "shutil.copy(fn, ofn)"
    ]
   },
@@ -562,7 +638,7 @@
     "fns = [fn for fn in fns if 'CtoT' in fn or 'AtoG' in fn]\n",
     "for fn in fns:\n",
     "    direction = fn.split('/')[-2]\n",
-    "    ofn = \"../figures/long_flank_A_intergenic_%s.pdf\" % direction\n",
+    "    ofn = \"../supplementary_figures/long_flank_A_intergenic_%s.pdf\" % direction\n",
     "    shutil.copy(fn, ofn)\n"
    ]
   },
@@ -577,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -586,12 +662,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote ../../figures/genome_as_ref_comparison.pdf\u001b[0m\r\n"
+      "Wrote ../../supplementary_figures/genome_as_ref_comparison.pdf\u001b[0m\r\n"
      ]
     }
    ],
    "source": [
-    "!cd genome_as_ref;./genome_ref_plot.py genome_as_ref.cfg ../../figures/genome_as_ref_comparison.pdf"
+    "!cd genome_as_ref;./genome_ref_plot.py genome_as_ref.cfg ../../supplementary_figures/genome_as_ref_comparison.pdf"
    ]
   },
   {
@@ -603,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -614,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -675,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -706,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -735,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -747,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -843,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -881,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -915,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -950,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -976,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -1020,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -1046,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -1072,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -1110,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
