ENH: update ipy scripts for using python 3 version of mutation_motif

--- a/manuscript_scripts/manuscript_figs_tables.ipynb
+++ b/manuscript_scripts/manuscript_figs_tables.ipynb
@@ -9,9 +9,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Utility functions"
    ]
@@ -20,8 +18,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -36,8 +33,7 @@
     "code_folding": [
      0
     ],
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -111,8 +107,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -307,16 +302,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "!cd ../compound_figures/; pdflatex fig1.tex > /dev/null 2>&1; pdflatex fig2.tex > /dev/null 2>&1\n",
+    "!mv ../compound_figures/fig*.pdf ../figures/.\n",
     "!find ../compound_figures/ -name \"*.log\" -delete\n",
     "!find ../compound_figures/ -name \"*.aux\" -delete\n",
-    "!mv ../compound_figures/*.pdf ../figures/."
+    "!find ../compound_figures/ -name \"*.pdf\" -delete"
    ]
   },
   {
@@ -328,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -348,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -371,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -388,6 +384,24 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MI C-->T figure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!cp ../results/ensembl_snps_79/A/intergenic/directions/CtoT/MI.pdf ../figures/."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "heading_collapsed": true
    },
@@ -397,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true,
     "hidden": true
@@ -418,10 +432,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -452,10 +465,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -485,10 +497,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -519,10 +530,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -540,10 +550,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -574,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -608,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -628,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -653,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -679,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -690,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -751,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -782,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -811,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -823,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -919,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -957,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -991,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -1026,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -1052,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -1096,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -1122,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -1148,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -1186,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
