MAINT: manuscriupt fig/table notebook no longer imports mutation complements
[CHANGED] the melanoma strand symmetry spectra test no longer filters
    results by p-value.

--- a/manuscript_scripts/manuscript_figs_tables.ipynb
+++ b/manuscript_scripts/manuscript_figs_tables.ipynb
@@ -9,9 +9,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Utility functions"
    ]
@@ -20,8 +18,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -33,11 +30,26 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "MUTATION_COMPLEMENTS = {'CtoG': 'GtoC',\n",
+    "                        'CtoA': 'GtoT',\n",
+    "                        'AtoT': 'TtoA',\n",
+    "                        'CtoT': 'GtoA',\n",
+    "                        'AtoC': 'TtoG',\n",
+    "                        'AtoG': 'TtoC'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
     "code_folding": [
      0
     ],
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -109,10 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -183,46 +194,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Manuscript figures and tables"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Figures"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false,
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "!mkdir -p ../figures\n",
-    "!mkdir -p ../supplementary_figures\n",
-    "!mkdir -p ../compound_figures"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "### C->T figure\n",
-    "\n",
-    "Copy the 1,2,3 plots and the summary and place them into `../compound_figures/`. They will be combined into a single multi-panel plot separately."
    ]
   },
   {
@@ -233,12 +214,34 @@
    },
    "outputs": [],
    "source": [
-    "fns = !ls ../results/ensembl_snps_79/A/intergenic/directions/CtoT/*.pdf"
+    "!mkdir -p ../figures\n",
+    "!mkdir -p ../supplementary_figures\n",
+    "!mkdir -p ../compound_figures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### C->T figure\n",
+    "\n",
+    "Copy the 1,2,3 plots and the summary and place them into `../compound_figures/`. They will be combined into a single multi-panel plot separately."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fns = !ls ../results/ensembl_snps_79/A/intergenic/directions/CtoT/*.pdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -256,9 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### A->G figure\n",
     "\n",
@@ -267,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -285,16 +286,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Make compound figures and copy into place"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -309,16 +308,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Melanoma grid figure"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -331,16 +328,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Spectra grid for intergenic Autosomal vs X-chromosomal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -356,16 +351,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Spectra grid got malignant melanoma strand"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -382,16 +375,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### MI C-->T figure"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -402,16 +393,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Tables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -429,14 +418,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from mutation_motif.complement import MUTATION_COMPLEMENTS\n",
-    "\n",
     "fns = !ls ../results/ensembl_snps_79/A/intergenic/directions/*/*.txt\n",
     "fns = [fn for fn in fns if fn.split(\"/\")[-2] in MUTATION_COMPLEMENTS]\n",
     "\n",
@@ -459,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -479,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -498,25 +485,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Figures"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### C->T and A->G figures from exon data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -543,16 +526,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Autosomal intergenic nbr grid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -565,16 +546,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Long flanks for C->T and A->G"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -590,9 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Comparing with analyses that use reference starting bases chosen at random from the genome\n",
     "\n",
@@ -601,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -627,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -638,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -690,19 +667,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Make C->T Intergenic table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -724,19 +698,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Make A->G table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -758,9 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### The extent of neighbourhoods affecting mutations\n",
     "\n",
@@ -769,10 +738,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -793,8 +761,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
-    "heading_collapsed": true
+    "collapsed": false
    },
    "source": [
     "### Comparing neghbour effects between autosomal intergenic and intronic"
@@ -802,10 +769,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -825,19 +791,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Comparison of neighbour effects for intergenic Auto and X-chrom"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -847,10 +810,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -937,19 +899,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Comparison of spectra for intergenic and intronic for Autosomal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -978,19 +937,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Comparison of spectra for intergenic, between Auto and X-chrom"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1015,19 +971,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Comparison of spectra for intronic, between Auto and X-chrom"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1053,19 +1006,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Strand symmetry neighbour for malignant melanoma"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1082,41 +1032,29 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Strand symmetry spectra for malignant melanoma"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "is_sig = SequentialSidak(4)\n",
     "table = LoadTable(\"../results/ensembl_snps_79/malignant_melanoma/combined_strand_symmetric/spectra_summary.txt\", sep=\"\\t\")\n",
-    "table = table.filtered(is_sig, columns=\"prob\")\n",
     "if table.Shape[0] == 0:\n",
     "    print \"No significant differences in spectra between %s\" % seq_class\n",
-    "print\n",
+    "\n",
     "table = table.withNewColumn(\"Direction\", lambda x: format_direction(x), columns=\"direction\")\n",
     "table = table.filtered(lambda x: x == \"+\", columns=\"strand\")\n",
     "table = table.getColumns([\"Direction\", \"ret\", \"prob\"])\n",
     "table = table.withNewHeader([\"ret\", \"prob\"], [\"RET\", \"p-value\"])\n",
     "table.setColumnFormat(\"p-value\", format_pvalue)\n",
+    "\n",
     "table.Title = \"Differences in spectra between strands for malignant melanoma point mutations. \"\\\n",
     "+r\"Separate log-linear models were used for the + strand starting bases A and C. \"\\\n",
     "+r\"RET is the RE term for that row mutation direction. \"\\\n",
@@ -1129,19 +1067,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Intronic autosomal mutation summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1158,19 +1093,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Neighbour influence differences between germline exon and melanoma"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1194,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -1232,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
