MAINT: changed names of compound fig latex files
[CHANGED] fig1-> fig2 and fig2->fig3

--- a/compound_figures/fig2.tex
+++ b/compound_figures/fig2.tex
@@ -1,9 +1,9 @@
-\documentclass[letter]{article}
+\documentclass{article}
 \usepackage[utf8]{inputenc}
-\usepackage{caption}
-\usepackage{subcaption}
+\usepackage[justification=centering]{subcaption}
 \usepackage{subfig}
 \usepackage[pdftex]{graphicx}
+\usepackage[export]{adjustbox}
 \usepackage{geometry}
  \geometry{
  paperheight=16cm,
@@ -19,37 +19,38 @@
 \begin{document}
 
 \begin{figure}
-\centering
-	\captionsetup[subfigure]{font={Large,bf},labelformat=simple}
-    \begin{subfigure}[b]{0.415\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{A_intergenic_freq_All-chrom_A-GC_All-AtoG_summary}
-        \caption{}
-        \label{fig:a-g:summary}
-    \end{subfigure}
-    \hspace{1em}
-    \begin{subfigure}[b]{0.4\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{A_intergenic_freq_All-chrom_A-GC_All-AtoG_1}
-        \caption{}
-        \label{fig:a-g:1}
-    \end{subfigure}
+    \centering
     
-    \begin{subfigure}[b]{0.4\textwidth}
+    \captionsetup[subfigure]{font={Large,bf},labelformat=simple}
+%     \hspace*{\fill}
+    \begin{subfigure}[b]{0.385\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{A_intergenic_freq_All-chrom_A-GC_All-AtoG_2}
+        \includegraphics[width=\textwidth,left]{A_intergenic_freq_All-chrom_A-GC_All-CtoT_summary}
         \caption{}
-        \label{fig:a-g:2}
+        \label{fig:c-t:summary}
     \end{subfigure}
     \hspace{1em}
     \begin{subfigure}[b]{0.4\textwidth}
         \centering
-         \includegraphics[width=\textwidth]{A_intergenic_freq_All-chrom_A-GC_All-AtoG_3}
+        \includegraphics[width=\textwidth]{A_intergenic_freq_All-chrom_A-GC_All-CtoT_1}
         \caption{}
-        \label{fig:a-g:3}
+        \label{fig:c-t:1}
+    \end{subfigure}
+    \vfill
+%     \hspace{\fill}
+    \begin{subfigure}[b]{0.4\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{A_intergenic_freq_All-chrom_A-GC_All-CtoT_2}
+        \caption{}
+        \label{fig:c-t:2}
+    \end{subfigure}
+    \hspace{1em}
+    \begin{subfigure}[b]{0.4\textwidth}
+        \centering
+         \includegraphics[width=\textwidth]{A_intergenic_freq_All-chrom_A-GC_All-CtoT_3}
+        \caption{}
+        \label{fig:c-t:3}
     \end{subfigure}
 \end{figure}
 
 \end{document}
-
-
